--- a/index.html
+++ b/index.html
@@ -6,5 +6,37 @@
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body></body>
+  <body>
+    <div class="grid">
+      <div class="header">
+        <div class="headerSpace"></div>
+        <div class="headerContent">
+          <div class="leftSide">
+            <div class="left">
+              <span class="leftHeader"> upcoming </span>
+              <span class="leftHeader"> all ages hardcore </span>
+            </div>
+
+            <div class="center">
+              <span class="centerHeader">at the eagles lodge</span>
+              <span class="centerHeader">schenectady, new york</span>
+            </div>
+          </div>
+          <div class="rightSide">
+            <div class="right">
+              <span class="rightHeader">hope to see you there</span>
+              <span class="rightHeader">wednesday,june 27 1990</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="content">bad</div>
+      <div class="nav"></div>
+      <div class="footer">
+        <span class="footerContent main">religion</span>
+        <span class="footerContent sub">with</span>
+        <span class="footerContent sub">jawbeaker & glee club</span>
+      </div>
+    </div>
+  </body>
 </html>
