--- a/index.html
+++ b/index.html
@@ -7,5 +7,31 @@
     <link rel="stylesheet" href="dist/css/styles.css" />
     <title>10x19</title>
   </head>
-  <body></body>
+  <body>
+    <span> </span>
+    <span> </span>
+    <div class="menu">Menu</div>
+    <div class="numbers-row">
+      <div class="number">#10</div>
+      <div class="number">#9</div>
+      <div class="number">#8</div>
+      <div class="number">#7</div>
+      <div class="number">#6</div>
+    </div>
+    <div class="numbers-row">
+      <div class="number">#5</div>
+      <div class="number">#4</div>
+      <div class="number">#3</div>
+      <div class="number">#2</div>
+      <div class="number">#1</div>
+    </div>
+    <div class="center-image"></div>
+    <span></span>
+    <div class="scrolling__text">
+      <span>
+        This is a very long text line which moving from left to right.
+      </span>
+    </div>
+    <span></span>
+  </body>
 </html>
