--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
               interest reporting, focusing on storytelling and insight.
             </p>
             <a href="#" class="btn">Learn More</a>
+            <a href="#" class="btn">Advertise</a>
           </div>
           <img src="https://source.unsplash.com/random/500x360" alt="" />
         </article>
@@ -63,6 +64,7 @@
               interest reporting, focusing on storytelling and insight.
             </p>
             <a href="#" class="btn">Learn More</a>
+            <a href="#" class="btn">Advertise</a>
           </div>
           <img src="https://source.unsplash.com/random/500x360" alt="" />
         </article>
@@ -74,9 +76,11 @@
               interest reporting, focusing on storytelling and insight.
             </p>
             <a href="#" class="btn">Learn More</a>
+            <a href="#" class="btn">Advertise</a>
           </div>
           <img src="https://source.unsplash.com/random/500x360" alt="" />
         </article>
+
         <div class="line">
           <article class="product">
             <div class="">
@@ -87,6 +91,7 @@
                 interest reporting, focusing on storytelling and insight.
               </p>
               <a href="#" class="btn">Learn More</a>
+              <a href="#" class="btn">Advertise</a>
             </div>
           </article>
           <article class="product">
@@ -98,6 +103,47 @@
                 interest reporting, focusing on storytelling and insight.
               </p>
               <a href="#" class="btn">Learn More</a>
+              <a href="#" class="btn">Advertise</a>
+            </div>
+          </article>
+        </div>
+
+        <article class="product">
+          <div class="">
+            <h4 class="product__category">Journalism</h4>
+            <p class="product__description">
+              Our journalists create in-depth, independent, original public
+              interest reporting, focusing on storytelling and insight.
+            </p>
+            <a href="#" class="btn">Learn More</a>
+            <a href="#" class="btn">Advertise</a>
+          </div>
+          <img src="https://source.unsplash.com/random/500x360" alt="" />
+        </article>
+
+        <div class="line">
+          <article class="product">
+            <div class="">
+              <h4 class="product__category">Journalism</h4>
+              <img src="https://source.unsplash.com/random/500x360" alt="" />
+              <p class="product__description">
+                Our journalists create in-depth, independent, original public
+                interest reporting, focusing on storytelling and insight.
+              </p>
+              <a href="#" class="btn">Learn More</a>
+              <a href="#" class="btn">Advertise</a>
+            </div>
+          </article>
+          <article class="product">
+            <div class="">
+              <h4 class="product__category">Journalism</h4>
+              <img src="https://source.unsplash.com/random/500x360" alt="" />
+              <p class="product__description">
+                Our journalists create in-depth, independent, original public
+                interest reporting, focusing on storytelling and insight.
+              </p>
+              <a href="#" class="btn">Learn More</a>
+              <a href="#" class="btn">Advertise</a>
             </div>
           </article>
         </div>
@@ -124,7 +170,18 @@
 
     <footer>
       <div class="footer__top">
-        <span>Schwartz</span>
+        <span>Schwartz
+          <ul>
+            <li>Terms & Conditions
+              </li>
+            <li>Privacy Policy</li>
+          </ul>
+          <ul>
+            <li>© 2020 Schwartz Publishing
+              </li>
+            <li>All rights reserved</li>
+          </ul>
+        </span>
       <ul>
         <li>Schwartz Media</li>
         <li>Schwartz Books</li>
