img error check

--- a/index.html
+++ b/index.html
@@ -95,21 +95,21 @@
                     <div class="cando">
                         <div class="row">
                             <div class="skillIcon">
-                                <img src="/images/html-icon.png" alt="">
+                                <img src="images/html-icon.png" alt="">
                                 <div class="skillName">HTML</div>
                             </div>
                             <div class="skillIcon">
-                                <img src="/images/css-icon.png" alt="">
+                                <img src="images/css-icon.png" alt="">
                                 <div class="skillName">CSS</div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="skillIcon">
-                                <img src="/images/js-icon.png" alt="">
+                                <img src="images/js-icon.png" alt="">
                                 <div class="skillName">Javascript</div>
                             </div>
                             <div class="skillIcon">
-                                <img src="/images/git-icon.png" alt="">
+                                <img src="images/git-icon.png" alt="">
                                 <div class="skillName">Git</div>
                             </div>
                         </div>
@@ -118,21 +118,21 @@
                     <div class="willdo">
                         <div class="row">
                             <div class="skillIcon">
-                                <img src="/images/sass-icon.png" alt="">
+                                <img src="images/sass-icon.png" alt="">
                                 <div class="skillName">SASS</div>
                             </div>
                             <div class="skillIcon">
-                                <img src="/images/node-icon.png" alt="">
+                                <img src="images/node-icon.png" alt="">
                                 <div class="skillName">Node</div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="skillIcon">
-                                <img src="/images/react-icon.png" alt="">
+                                <img src="images/react-icon.png" alt="">
                                 <div class="skillName">React</div>
                             </div>
                             <div class="skillIcon">
-                                <img src="/images/python-icon.png" alt="">
+                                <img src="images/python-icon.png" alt="">
                                 <div class="skillName">Python</div>
                             </div>
                         </div>
