--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
         </ul>
 
         <div class="sns">
-            <i class="fab fa-twitter">
-                <a href="https://wwww.twitter.com/"></a>
-            </i>
-            <i class="fab fa-facebook-f">
-                <a href="https://wwww.facebook.com/"></a>
-            </i>
-            <i class="fab fa-instagram">
-                <a href="https://wwww.instagram.com/"></a>
-            </i>
+            <a href="https://twitter.com/">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.facebook.com/">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://www.instagram.com/">
+                <i class="fab fa-instagram"></i>
+            </a>
+           
         </div>
     </nav>
 
