--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             <a href="https://www.instagram.com/">
                 <i class="fab fa-instagram"></i>
             </a>
-           
         </div>
     </nav>
 
@@ -54,7 +53,7 @@
             <div class="greetingWrapper">
                 <section class="greeting">
                     <div class="greetingImg">
-                        <img src="/img/satya-nadella.jpg" alt="Satya Nadella not me">
+                        <img src="img/satya-nadella.jpg" alt="Satya Nadella not me">
                     </div>
                     <div class="greeting-text">
                         <p class="pGreeting">Hi, there. I'm</p>
@@ -104,7 +103,7 @@
                                 <div class="skillName">Javascript</div>
                             </div>
                             <div class="skillIcon">
-                                <img src="imagimgs/git-icon.png" alt="">
+                                <img src="img/git-icon.png" alt="">
                                 <div class="skillName">Git</div>
                             </div>
                         </div>
