add clock function made by js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
-
+    <script defer src="js/clock.js"></script>
     <script src="https://kit.fontawesome.com/7b2a51515c.js" crossorigin="anonymous"></script>
     <title>Jun's Portfolio</title>
 </head>
@@ -48,6 +48,12 @@
         </div>
     </nav>
 
+    <section class="display">
+        <div class="clock">
+            <h1>00:00</h1>
+        </div>
+        <span class="weather"></span>
+    </section>
     <main class="wrapper">
         <section class="content">
             <div class="greetingWrapper">
