backToTop btn class name correction

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </section>
         </section>
 
-        <button class="arrowUp visible">
+        <button class="arrowUp invisible">
             <span>Back to TOP</span>
             <i class="far fa-arrow-alt-circle-up"></i>
         </button>
